--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MW Site</title>
+    <title>Wegebergs Site</title>
 </head>
 <body>
     <h1>Github pages</h1>
