Added links to pub repositories

--- a/index.html
+++ b/index.html
@@ -7,5 +7,22 @@
 </head>
 <body>
     <h1>Github pages</h1>
+    <ul>
+        <li>
+            <a href="https://github.com/wegeberg/flexnet-uppy">
+                Flexnet Uppy
+            </a>
+        </li>
+        <li>
+            <a href="https://github.com/wegeberg/flexnet-tinymce5-some">
+                Flexnet TineMCE 5 SOME extension
+            </a>
+        </li>
+        <li>
+            <a href="https://github.com/wegeberg/php-mysql-skeleton">
+                PHP/MySQL skeleton
+            </a>
+        </li>
+    </ul>
 </body>
 </html>
